<resources>
    <string name="app_name">SpokenWordApp</string>
    <string name="title_activity_spoken_word_main">SpokenWordApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_second">Home Second</string>
    <string name="launch">LAUNCH!</string>
    <string name="title_activity_spoken_main_screen">SpokenWordApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="head_of_christ">Head of Christ</string>
    <string name="spokenwordapp">SpokenWordApp</string>
    <string name="william_marrion_branham">Only Believe, All Things Are Possible</string>
    <string name="art_work">Art Work</string>
    <string name="scan_app">Scan App</string>
    <string name="equalizer">Equalizer</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Video Track</string>
    <string name="church_last_played_content">Church Last Played Content</string>
    <string name="spoken_word">Spoken Word</string>
    <string name="local_video_thumbnail">Local Video Thumbnail</string>
    <string name="video_title">Video Title</string>
    <string name="video_artist">Video Artist</string>
    <string name="local_video_file_size">Local Video File Size</string>
    <string name="spokenapp">SpokenWordApp</string>
    <string name="audio_title">Audio Title</string>
    <string name="audio_artist">Audio Artist</string>
    <string name="time">Time</string>
    <string name="size">Size</string>
    <string name="audio_songs_options">Audio Songs Options</string>
    <string name="watch_service_online">Watch Service Online</string>
    <string name="watch_service">WATCH SERVICE ONLINE</string>
    <string name="seal_message">7-Seal Message</string>
    <string name="download_video_sermons">DOWNLOAD VIDEO SERMONS</string>
    <string name="download_audio_sermons">DOWNLOAD AUDIO SERMONS</string>
    <string name="download_specials">DOWNLOAD SPECIALS</string>
    <string name="annnoucement">ANNOUNCEMENTS</string>
    <string name="broadcast">Broadcast</string>
    <string name="rtmp_demo">RTMP Demo</string>
    <string name="hls_demo">HLS Demo</string>
    <string name="streaming_logo">Streaming Logo</string>
    <string name="dash_demo">DASH Demo</string>
    <string name="channel_name">Spoken Word</string>
    <string name="channel_description">Spoken Word Online Service</string>
    <string name="select_online_service">Select Online Service</string>
    <string name="annoucement">Announcement</string>
    <string name="play_pause">PLAY/PAUSE</string>
    <string name="errorChurchLoad">An Error Occurred While Loading Data!</string>
    <string name="content_title">Content Title</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="video_sermons">Video Sermons</string>
    <string name="audio_sermons">Audio Sermons</string>
    <string name="specials">Specials</string>
    <string name="live">Live</string>
    <string name="offline">Offline</string>
    <string name="church_name">Church Name</string>
    <string name="viewers">20 Viewers</string>
    <string name="contact">Contact us at</string>
    <string name="service_offline">Offline</string>
    <string name="service_on">Live</string>
    <string name="service_name">SpokenMediaBrowserService</string>
    <string name="pause">Pauase</string>
    <string name="channel_name_music">SpokenMusic</string>
    <string name="channel_description_music">Spoken Local Music</string>
    <string name="favorite">Favourite</string>
    <string name="error_no_metadata">Error no metadata</string>
    <string name="browse_genres">Browse genres</string>
    <string name="browse_genre_subtitle">Browse genres subtitle</string>
    <string name="browse_by_genre_subtitle">Browse music by genre subtitle</string>
    <string name="random_queue_title">Random queue title</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="startTime">02:30:45</string>
    <string name="startTimer">00:00:00</string>
    <string name="search">Search</string>
    <string name="search_songs">Search Songs by title and Artist</string>
    <string name="share">SHARE</string>
    <string name="artist">Artist</string>
    <string name="viewssel">10 Views</string>
    <string name="options_for_content">Options for content</string>
    <string name="eq">Equalizer</string>
    <string name="show_eq_dialog">Show EQ Dialog</string>
    <string name="label_logout">Log Out</string>
    <string name="msg_logout">Do you want to logout from the app?</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Ok</string>
    <string name="msg_enter_details">Please Enter your Details</string>
    <string name="msg_hint_name">Enter Name</string>
    <string name="label_submit">Submit</string>
    <string name="label_simple_dialog">Simple Dialog</string>
    <string name="label_dialog_with_data">Dialog With Data</string>
    <string name="details">DETAILS</string>
    <string name="download_audio_file">Download audio file</string>
    <string name="download">DOWNLOAD</string>

</resources>
