<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/audioThumbnail"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="7dp"
        android:src="@drawable/branham"
        card_view:civ_border_color="#FF000000"
        card_view:civ_border_width="2dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toStartOf="@+id/guideline"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/audioTitle"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@id/audioThumbnail"
        android:ellipsize="end"
        android:fontFamily="@font/averia_sans_libre_light"
        android:maxLines="1"
        android:text="@string/audio_title"
        android:textColor="@color/exo_error_message_background_color"
        android:textSize="16sp"
        android:textStyle="bold"
        card_view:layout_constraintBottom_toTopOf="@+id/audioArtist"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/audioArtist"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_below="@+id/audioTitle"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/audioThumbnail"
        android:ellipsize="end"
        android:textSize="14sp"
        android:fontFamily="@font/averia_sans_libre_light"
        android:maxLines="1"
        android:text="@string/audio_artist"
        android:textStyle="normal"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toStartOf="@+id/guideline"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.511" />

    <TextView
        android:id="@+id/audioTime"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/audioTitle"
        android:textSize="14sp"
        android:fontFamily="@font/averia_sans_libre_light"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/time"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toStartOf="@+id/audioChoice"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/guideline"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/audioSize"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_below="@+id/audioTime"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/audioArtist"
        android:ellipsize="end"
        android:textSize="14sp"
        android:fontFamily="@font/averia_sans_libre_light"
        android:maxLines="1"
        android:text="@string/size"
        android:textStyle="normal"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toStartOf="@+id/audioChoice"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/guideline"
        card_view:layout_constraintTop_toBottomOf="@+id/audioTime"
        card_view:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/audioChoice"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_toEndOf="@id/audioTime"
        android:contentDescription="@string/audio_songs_options"
        android:src="@drawable/ic_baseline_menu_open_24"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.847"
        card_view:layout_constraintStart_toStartOf="@+id/guideline"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintGuide_end="110dp" />

</androidx.constraintlayout.widget.ConstraintLayout>