<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="272dp"
        android:background="#B7D1E1">


        <ImageView
            android:id="@+id/imageViewOnline"
            android:layout_width="395dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/select_online_service"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/churchofgod" />

        <TextView
            android:id="@+id/textViewContentTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-black"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:text="@string/content_title"
            android:textAlignment="textStart"
            android:textColor="#4E4D4D"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewContViewers"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageViewOnline"
            app:layout_constraintTop_toBottomOf="@+id/imageViewOnline"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewChurchName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginBottom="6dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="church"
            android:textColor="#4A4948"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/viewBottom"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewArtist"
            app:layout_constraintVertical_bias="0.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/contentArtist"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/churchofgod"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toTopOf="@+id/viewBottom"
            app:layout_constraintEnd_toStartOf="@+id/textViewChurchName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewOnline"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/artist"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewContentTitle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="291dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="258dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewContViewers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="50dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/viewssel"
            app:layout_constraintBottom_toTopOf="@+id/viewBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/imageViewOnline"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/options_for_content"
            app:layout_constraintBottom_toTopOf="@+id/viewBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewContViewers"
            app:srcCompat="@drawable/ic_baseline_drag_indicator_24" />

        <View
            android:id="@+id/viewTop"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewOnline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="91dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="152dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewTop" />

        <TextView
            android:id="@+id/textViewDuration"
            android:layout_width="58dp"
            android:layout_height="19dp"
            android:layout_marginEnd="60dp"
            android:background="@android:color/black"
            android:gravity="end"
            android:text="TextView"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.628" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>